sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var x
	for (i<-0 to lgr-2) {
		if 
	}
}
